# von-neumann-transform

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  flake8.yml  mypy.yml  release.yml  tests.yml
src/von_neumann_transform/: __init__.py  basis.py  methods.py  overlap.py  projection.py  reconstruction.py  transform.py
test/: test_basis_function_examples.py  test_overlap_examples.py  test_overlap_properties.py  test_vnt_example_pulses.py
test/data/: example_pulse_ivnt.npz  example_pulse_vnt.npz
test/helpers/: example_basis_functions.py  example_grids.py  example_overlaps.py
tests/: test_constructor_examples.py  test_grid_examples.py  test_ivnt_example_pulses.py  test_overlap_method_consistency.py  test_projection_method_consistency.py  test_vnt_example_pulses.py
tests/.github/workflows/: ci.yml
tests/helpers/: README.md  example_pulse_ivnt.py  example_pulse_vnt.py
